--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -6,42 +6,10 @@ jobs:
     name: Lint
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout
-      uses: actions/checkout@v2
-    - name: Setup
-      uses: actions/setup-ruby@v1
-      with:
-        ruby-version: '2.4'
-    - name: Cache gems
-      uses: actions/cache@v1
-      with:
-        path: vendor/bundle
-        key: ${{ runner.os }}-gems-${{ env.cache-name }}-${{ hashFiles('**/Gemfile.lock') }}
-        restore-keys: |
-          ${{ runner.os }}-gems-
-
-    - name: Bundle install
-      run: |
-        bundle config our_gem_repo.com our_username:${{ secrets.GEM_REPO_PASSWORD }}
-        bundle config set without 'production staging'
-        bundle config path vendor/bundle
-        bundle install
-        git checkout Gemfile.lock
-
-    - name: Get file changes
-      id: get_file_changes
-      uses: trilom/file-changes-action@v1.2.3
-      with:
-        output: ' '
-    - name: Echo file changes
-      run: |
-        echo Changed files: ${{ steps.get_file_changes.outputs.files }}
-
-    - name: Run lint
-      uses: samuelmeuli/lint-action@v1.4.0
-      with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        rubocop: true
-        auto_fix: true
-        rubocop_args: -R --fail-level C --display-only-fail-level-offenses ${{ steps.get_file_changes.outputs.files}}
-        rubocop_command_prefix: bundle exec
+      - name: CheckIn
+      - uses: lots0logs/gh-action-get-changed-files@2.1.4
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+      - name: Echo file changes
+        run: |
+          echo Changed files: ${{ steps.gh-action-get-changed-files.all }}
